fix: corrigir imports dos controllers, ajuste JWT no Swagger e melhorias em autenticação
- Corrige posição dos imports nos controllers para build correto
- Ajusta uso do token JWT no Swagger (remover Bearer duplicado)
- Melhora lógica de autenticação e authorities (FuncionarioDetalhesDto, AutenticacaoFilter)
- Atualiza inserts iniciais no Flyway